--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -13,4 +13,8 @@ jobs:
         with:
           go-version: "1.24"
       - name: Run coverage
-        run: go test -v -covermode=atomic ./...
+        run: go test -v -coverprofile=coverage.txt -covermode=atomic ./...
+      - uses: codecov/codecov-action@v5
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          slug: yunginnanet/parsuri
